--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
